# vseross

./: .gitignore  .pre-commit-config.yaml  EMBDS.ipynb  LICENSE  README.md  Task_2_ZHANIBEK_KASSYMKAN.ipynb  Untitled.ipynb  about_grad_decent.ipynb  auto-pytorch.ipynb  autosklearn.ipynb  bruh.ipynb  confusion_matrix.ipynb  convergence_and_learning_rates.ipynb  cuda.ipynb  d.ipynb  dim_reduction.ipynb  embedding_math.ipynb  h2o.ipynb  hime_work.ipynb  kmeans.ipynb  linreg.ipynb  logistic.ipynb  lol.ipynb  math.ipynb  nlp.ipynb  nltk.ipynb  omg.ipynb  pandas.ipynb  pca_general.ipynb  pyproject.toml  requirements.txt  roc_curve.ipynb  setup.cfg  svd.ipynb  svm.ipynb  textscls.ipynb  tpot.ipynb  weight_initialization.ipynb  weight_regularization.ipynb  weights_biases_wandb.ipynb  (+1 more)
