[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aoi_cv"
version = "0.1.0"
description = "AI Olympiad baseline template"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "{{ Your Name }}"}]
license = {text = "MIT"}
dependencies = []

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
